--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,10 +7,69 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
-    <TextView
-        android:layout_width="wrap_content"
+<LinearLayout
+        android:id="@+id/info"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:padding="10dip" >
+
+        <TextView
+            android:id="@+id/dispositivo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dispositivo" />
+        
+        <TextView
+            android:id="@+id/bateria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bateria" />
+
+        <TextView
+            android:id="@+id/lat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lat" />
+        
+        <TextView
+            android:id="@+id/longi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/longi" />
+<TextView
+            android:id="@+id/antena_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/antena_id" />
+<TextView
+            android:id="@+id/lac"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lac" />
+        <TextView
+            android:id="@+id/operadora"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/operadora" />
+
+        <TextView
+            android:id="@+id/sinal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sinal" />
+        
+    </LinearLayout>
+
+<Button
+    android:id="@+id/bt"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:layout_alignParentBottom="true"
+    android:gravity="center_vertical"
+    android:text="@string/bt_atualizar" 
+    android:onClick="atualizar"/>
+
 
 </RelativeLayout>
